# omini_retail_data_pipeline

./: .env.sample  .gitignore  README.md  pyproject.toml
docs/: source_model.md
sql/ddl/: 001_create_schemas.sql  002_create_control_tables.sql  003_create_raw_tables.sql  004_create_bronze_tables.sql  005_create_silver_tables.sql  006_create_gold_tables.sql  007_create_scd_tables.sql
src/: main.py
src/config/: settings.py
src/generator/: base.py  batch_scenarios.py  ids.py  master_data_generator.py  transaction_data_generator.py  writers.py
src/ingestion/: batch_control.py  create_bronze_tables.py  create_control_tables.py  create_gold_tables.py  create_raw_tables.py  create_scd_tables.py  create_schemas.py  create_silver_tables.py  file_tracker.py  ingest_raw_batch.py  metadata.py  raw_loader.py
src/quality/: business_rules.py  cleaners.py
src/transform/: bronze.py  bronze_rules.py  gold.py  scd.py  silver.py
src/utils/: db.py  logger.py
